fix: mobile cards text  overflowing on mobile; better alignment of colors in language buttons

--- a/src/app/components/navbars/auth-navbar/auth-navbar.component.scss
+++ b/src/app/components/navbars/auth-navbar/auth-navbar.component.scss
@@ -165,9 +165,14 @@
     cursor: pointer;
     transition: 0.2s all;
 
+    &.selected {
+      color: white;
+    }
+
     &:hover,
     &:focus-within {
-      background-color: rgb(71 85 105);
+      background-color: #3aaaaa;
+      opacity: 0.5;
       color: white;
     }
   }
