--- a/src/app/views/landing/landing.component.scss
+++ b/src/app/views/landing/landing.component.scss
@@ -238,7 +238,6 @@
       // its inside a flex container
       flex: 0 0 350px;
       position: relative;
-      min-height: 550px;
       box-sizing: border-box;
       border-radius: 20px;
       overflow: hidden;
